gccida/c1/biv_total_increment
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2924:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2924:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2929:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2930:7: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( !biv ) 
      ^~~
      div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2934:19: error: use of undeclared identifier 'biv'
v3 = *( ( _WORD *)biv + 50); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2938:6: error: use of undeclared identifier 'biv'
if ( biv->mult_val == const_int_rtx[65] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2940:48: error: use of undeclared identifier 'biv'
v1 = fold_rtx_mult_add( v1, const_int_rtx[65], biv->add_val, biv->mode); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2940:62: error: use of undeclared identifier 'biv'
v1 = fold_rtx_mult_add( v1, const_int_rtx[65], biv->add_val, biv->mode); 
                                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2941:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2941:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/unroll.c:2943:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/biv_total_increment/src/obj/unroll.o] Error 1
